--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-    "name": "@sihe/emoji-modal",
-    "version": "1.0.1",
-    "description": "PC端表情组件",
-    "main": "dist/main.es.js",
-    "author": "zhong.haixiu",
-    "license": "MIT",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "serve": "vite preview"
-    },
-    "dependencies": {
-        "@ant-design/icons": "^4.5.0",
-        "antd": "^4.19.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
-    },
-    "devDependencies": {
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "less": "^4.1.1",
-        "less-loader": "^10.0.1",
-        "typescript": "^4.3.2",
-        "vite": "2.5.1",
-        "vite-plugin-babel-import": "^2.0.5",
-        "vite-plugin-imp": "^2.0.8"
-    }
+  "name": "myapp",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "antd": "^3.26.16",
+    "moment": "^2.29.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
